--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f7d04d5b",
+   "id": "35904a5f",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "692a985b",
+   "id": "3838c154",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7e7a9833",
+   "id": "5ff54239",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "36a97c6e",
+   "id": "4b793156",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b05c963f",
+   "id": "9e4f7a7e",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a8071238",
+   "id": "1f6cd24e",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1e811574",
+   "id": "581260c3",
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d5d55cc8",
+   "id": "9554df31",
    "metadata": {},
    "outputs": [
     {
@@ -835,14 +835,14 @@
     }
    ],
    "source": [
-    "# Determine if there are not any missing values in the student data. shows the number of rows NOT null\n",
+    "# Determine if there are not any missing values in the student data. Shows the number of rows NOT null\n",
     "student_data_df.notnull().sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7dfd2a21",
+   "id": "1ddab426",
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b59ec0f8",
+   "id": "efec4bdf",
    "metadata": {},
    "outputs": [
     {
@@ -893,6 +893,229 @@
    "source": [
     "# Determine data types for the student DataFrame.\n",
     "student_data_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ed5bfb8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add each prefix and suffix to remove to a list.\n",
+    "prefixes_suffixes = [\"Dr. \", \"Mr. \",\"Ms. \", \"Mrs. \", \"Miss \", \" MD\", \" DDS\", \" DVM\", \" PhD\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8ee01404",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jason\\AppData\\Local\\Temp\\ipykernel_14168\\3790455543.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word,\"\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterate through the words in the \"prefixes_suffixes\" list and replace them with an empty space, \"\".\n",
+    "for word in prefixes_suffixes:\n",
+    "    student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word,\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "23fde51c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student ID</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>math_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Paul Bradley</td>\n",
+       "      <td>M</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>66</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Victor Smith</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>94</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Kevin Rodriguez</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>90</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Richard Scott</td>\n",
+       "      <td>M</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>67</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Bonnie Ray</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>97</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39165</th>\n",
+       "      <td>39165</td>\n",
+       "      <td>Donna Howard</td>\n",
+       "      <td>F</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>99</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39166</th>\n",
+       "      <td>39166</td>\n",
+       "      <td>Dawn Bell</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>95</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39167</th>\n",
+       "      <td>39167</td>\n",
+       "      <td>Rebecca Tanner</td>\n",
+       "      <td>F</td>\n",
+       "      <td>9th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>73</td>\n",
+       "      <td>84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39168</th>\n",
+       "      <td>39168</td>\n",
+       "      <td>Desiree Kidd</td>\n",
+       "      <td>F</td>\n",
+       "      <td>10th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>99</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39169</th>\n",
+       "      <td>39169</td>\n",
+       "      <td>Carolyn Jackson</td>\n",
+       "      <td>F</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>95</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>39170 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Student ID     student_name gender grade         school_name  \\\n",
+       "0               0     Paul Bradley      M   9th   Huang High School   \n",
+       "1               1     Victor Smith      M  12th   Huang High School   \n",
+       "2               2  Kevin Rodriguez      M  12th   Huang High School   \n",
+       "3               3    Richard Scott      M  12th   Huang High School   \n",
+       "4               4       Bonnie Ray      F   9th   Huang High School   \n",
+       "...           ...              ...    ...   ...                 ...   \n",
+       "39165       39165     Donna Howard      F  12th  Thomas High School   \n",
+       "39166       39166        Dawn Bell      F  10th  Thomas High School   \n",
+       "39167       39167   Rebecca Tanner      F   9th  Thomas High School   \n",
+       "39168       39168     Desiree Kidd      F  10th  Thomas High School   \n",
+       "39169       39169  Carolyn Jackson      F  11th  Thomas High School   \n",
+       "\n",
+       "       reading_score  math_score  \n",
+       "0                 66          79  \n",
+       "1                 94          61  \n",
+       "2                 90          60  \n",
+       "3                 67          58  \n",
+       "4                 97          84  \n",
+       "...              ...         ...  \n",
+       "39165             99          90  \n",
+       "39166             95          70  \n",
+       "39167             73          84  \n",
+       "39168             99          90  \n",
+       "39169             95          75  \n",
+       "\n",
+       "[39170 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student_data_df"
    ]
   }
  ],
